# reactadmin-refine

./: .bandit.yaml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .tmp_parity_db.sqlite  API_IMPLEMENTATION.md  DEPENDENCY_ANALYSIS.md  GROUP4_COMPLETION_SUMMARY.py  Makefile  README.md  README_DEV.md  async_perf_test.py  conftest.py  create_users.py  create_users.sh  dev.db  docker-compose.redis.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
backend/: .env  .env.dev  .env.example  .env.production  .gitignore  .import_check.py  ARCHITECTURE.md  Dockerfile  ENV_SETUP.md  Makefile  README_ALEMBIC.md  __init__.py  alembic.ini  auth.py  cache.py  comprehensive_security_assessment_20250930_112755.json  create_tables.py  crud.py  database.py  debug_rbac.py  dev.db  docker-compose.perf.yml  main.py  middleware.py  models.py  openapi.json  pytest.ini  requirements.txt  run_superadmin_tests.py  schemas.py  setup.cfg
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: README.md  __init__.py  main.py
backend/app/api/v1/: README.md  __init__.py  async_auth.py  async_cache_system.py  async_roles.py  async_tenants_audit.py  async_user_mgmt.py  async_users.py  moved_to_v2_async_auth.py  moved_to_v2_async_cache_system.py  moved_to_v2_async_roles.py  moved_to_v2_async_tenants_audit.py  moved_to_v2_async_user_mgmt.py  moved_to_v2_async_users.py  sync_core.py
backend/app/api/v2/: __init__.py  (+6 more)
backend/app/auth/: __init__.py  async_auth.py  core.py
backend/app/cache/: __init__.py  async_redis.py  core.py
backend/app/core/: __init__.py  config.py  init.py  logging.py  security.py
backend/app/crud/: __init__.py  core.py
backend/app/db/: __init__.py  core.py
backend/app/main/: __init__.py  core.py
backend/app/middleware/: __init__.py  core.py  logging.py  security.py
backend/app/models/: core.py
backend/app/repositories/: __init__.py  audit.py  auth.py  cache.py  roles.py  sessions.py  system.py  tenants.py
backend/app/schemas/: __init__.py  core.py
backend/app/services/: __init__.py  health.py  system_metrics.py
backend/app/tools/: create_tables.py  debug_rbac.py
backend/db/: dev.db
backend/docs/: PRODUCTION_READINESS.md  README.md  react-admin-refine-spec.md
backend/perf/: README.md
backend/routers/: auth.py
backend/scripts/: grant_all_screen_access.py  reset_passwords.py  run_checks.sh  start_backend_dev.sh  stop_backend_dev.sh
backend/security/: safety_results_20250930_161508Z.json
backend/tests/: OWASPCheck.py  README_SUPERADMIN_TESTS.md  TEST_RESULTS_SUMMARY.md  conftest.py  conftest_security.py  locustfile.py  test_advanced_security.py  test_auth_sessions.py  test_bandit.py  test_basic.py  test_cache.py  test_cache_and_rate_limit_integration.py  test_group4_simple.py  test_group4_tenant_audit.py  test_health.py  test_integration_superadmin.py  test_logging.py  test_multitenant.py  test_owasp.py  test_owasp_categories.py  test_owasp_runner.py  test_rbac.py  test_rbac_more.py  test_redis_helpers.py  test_safety.py  test_security.py  test_security_tests.py  test_superadmin_basic.py  test_superadmin_multitenant.py
backend/tools/: async_perf_test.py  smoke.py
backend/tools/owasp/: OWASPCheck.py
frontend/: .env.example  .gitignore  AUDIT_REPORT.md  README.md  debug-user.js  package-lock.json  package.json  test-api.html  vite.config.ts
frontend/.github/: copilot-instructions.md
frontend/src/: App.tsx
frontend/src/pages/: DashboardPage.tsx  DashboardPageSimple.tsx
frontend/src/providers/: access-control-provider.ts  auth-provider.ts  data-provider.ts
frontend/src/services/: api.ts
frontend/src/styles/: theme.ts
frontend/src/types/: api.ts  index.ts
frontend/src/utils/: apiTester.ts  configValidator.ts
reactadmin_refine_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: security_check.sh  start_backend_dev.sh
tools/: async_perf_test.py
tools/owasp/: OWASPCheck.py
(+41 files in other folders)
